<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_title_appearance">
        <ListPreference
            android:entries="@array/mod_voci"
            android:icon="@drawable/ic_baseline_brightness"
            android:entryValues="@array/mod_valori"
            android:key="modTema"
            app:defaultValue="nightModeFollowSystem"
            app:useSimpleSummaryProvider="true"
            android:title="@string/settings_mod_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_preferences">

        <SwitchPreference
            android:title="@string/settings_vibration"
            android:summary="@string/settings_vibration_explanation"
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_vibration"
            android:key="vibra">

        </SwitchPreference>

    </PreferenceCategory>

</PreferenceScreen>